ValueError: Namespace GES not available
When building with gst-build I always get this issue when the gir file is being generated:
Traceback (most recent call last):
File "gesotioformatter.py", line 14, in <module>
File "/usr/lib64/python3.8/site-packages/gi/__init__.py", line 129, in require_version
raise ValueError('Namespace %s not available' % namespace)
ValueError: Namespace GES not available