ges/python/gesotioformatter.py
@@ -21,12 +21,8 @@ from gi.repository import GES
 from gi.repository import GLib
 from collections import OrderedDict
 
-try:
-    import opentimelineio as otio
-    otio.adapters.from_name('xges')
-except Exception as e:
-    Gst.info("Could not load OpenTimelineIO: %s" % e)
-    otio = None
+import opentimelineio as otio
+otio.adapters.from_name('xges')
 
 class GESOtioFormatter(GES.Formatter):
     def do_save_to_uri(self, timeline, uri, overwrite):
@@ -81,27 +77,26 @@ class GESOtioFormatter(GES.Formatter):
             timeline.get_asset().add_formatter(formatter)
             return formatter.load_from_uri(timeline, "file://" + tmpxges.name)
 
-if otio is not None:
-    GObject.type_register(GESOtioFormatter)
-    known_extensions_mimetype_map = [
-        ("otio", "xml", "fcpxml"),
-        ("application/vnd.pixar.opentimelineio+json", "application/vnd.apple-xmeml+xml", "application/vnd.apple-fcp+xml")
-    ]
+GObject.type_register(GESOtioFormatter)
+known_extensions_mimetype_map = [
+    ("otio", "xml", "fcpxml"),
+    ("application/vnd.pixar.opentimelineio+json", "application/vnd.apple-xmeml+xml", "application/vnd.apple-fcp+xml")
+]
 
-    extensions = []
-    for adapter in otio.plugins.ActiveManifest().adapters:
-        if adapter.name != 'xges':
-            extensions.extend(adapter.suffixes)
+extensions = []
+for adapter in otio.plugins.ActiveManifest().adapters:
+    if adapter.name != 'xges':
+        extensions.extend(adapter.suffixes)
 
-    extensions_mimetype_map = [[], []]
-    for i, ext in enumerate(known_extensions_mimetype_map[0]):
-        if ext in extensions:
-            extensions_mimetype_map[0].append(ext)
-            extensions_mimetype_map[1].append(known_extensions_mimetype_map[1][i])
-            extensions.remove(ext)
-    extensions_mimetype_map[0].extend(extensions)
+extensions_mimetype_map = [[], []]
+for i, ext in enumerate(known_extensions_mimetype_map[0]):
+    if ext in extensions:
+        extensions_mimetype_map[0].append(ext)
+        extensions_mimetype_map[1].append(known_extensions_mimetype_map[1][i])
+        extensions.remove(ext)
+extensions_mimetype_map[0].extend(extensions)
 
-    GES.FormatterClass.register_metas(GESOtioFormatter, "otioformatter",
-        "GES Formatter using OpenTimelineIO",
-        ','.join(extensions_mimetype_map[0]),
-        ';'.join(extensions_mimetype_map[1]), 0.1, Gst.Rank.SECONDARY)
+GES.FormatterClass.register_metas(GESOtioFormatter, "otioformatter",
+    "GES Formatter using OpenTimelineIO",
+    ','.join(extensions_mimetype_map[0]),
+    ';'.join(extensions_mimetype_map[1]), 0.1, Gst.Rank.SECONDARY)
